--- a/.github/workflows/elt_main.yml
+++ b/.github/workflows/elt_main.yml
@@ -1,4 +1,4 @@
-name: Deploy dbt
+name: Deploy ELT Jobs
 on:
   workflow_dispatch:
   
@@ -14,6 +14,7 @@ jobs:
           python-version: '3.10'
       - name: Set working directory
         run: cd elt_jobs
+        working-directory: ./elt_jobs
       - name: Install dependencies
         run: pip install -r requirements.txt
       - name: Run test hello
