--- a/.github/workflows/elt_main.yml
+++ b/.github/workflows/elt_main.yml
@@ -1,4 +1,4 @@
-name: Deploy ELT Jobs
+name: Deploy_ELT_Jobs
 on:
   workflow_dispatch:
   
@@ -12,8 +12,7 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
-        working-directory: ./elt_jobs
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: pip install -r elt_jobs/requirements.txt
       - name: Run test hello
-        run: python workflow_test.py
+        run: python elt_jobs/workflow_test.py
