--- a/.github/workflows/elt_main.yml
+++ b/.github/workflows/elt_main.yml
@@ -1,9 +1,12 @@
 name: Deploy_ELT_Jobs
 on:
   workflow_dispatch:
+
+env:
+  PUBLIC_KEY: ${{ secrets.public_key }}
   
 jobs:
-  deploy:
+  Run_Mysql_Snowflake:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -12,7 +15,15 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      - name: Install java
+        run: sudo apt update && sudo apt-get install openjdk-8-jdk-headless -qq
       - name: Install dependencies
         run: pip install -r elt_jobs/requirements.txt
-      - name: Run test hello
-        run: python elt_jobs/workflow_test.py
+      - name: Prepare config
+        run: openssl enc -d -aes-256-cbc -in elt_jobs/config.enc -out elt_jobs/.ini -pbkdf2 -k $PUBLIC_KEY
+      - name: Check files are created successfully
+        run: cd elt_jobs &&  ls -a
+      - name: Main elt job
+        run: python elt_jobs/main_elt.py
+      - name: Clean Mysql stage
+        run: python elt_jobs/clean_database.py
