--- a/.github/workflows/elt_main.yml
+++ b/.github/workflows/elt_main.yml
@@ -1,6 +1,8 @@
 name: Deploy_ELT_Jobs
 on:
   workflow_dispatch:
+  schedule:
+    - cron: '*/10 * * * *'
 
 env:
   PUBLIC_KEY: ${{ secrets.public_key }}
