--- a/.github/workflows/elt_main.yml
+++ b/.github/workflows/elt_main.yml
@@ -2,7 +2,7 @@ name: Deploy_ELT_Jobs
 on:
   workflow_dispatch:
   schedule:
-    - cron: '*/10 * * * *'
+    - cron: '0 */2 * * *'
 
 env:
   PUBLIC_KEY: ${{ secrets.public_key }}
