--- a/.github/workflows/test_dbt.yml
+++ b/.github/workflows/test_dbt.yml
@@ -19,6 +19,6 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install dependencies
-        run: pip install dbt-snowflake==1.6.4
+        run: pip install dbt-snowflake==1.6.4 && cd dbt_workflow/sf_workflow
       - name: Run dbt
         run: dbt run --profiles-dir .
