--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,12 +9,14 @@ services:
     build:
       context: ./Database_Services/billing_and_payment
       dockerfile: Dockerfile
+    restart: always
     links:
       - "mysql:localhost"
     image: billing_and_payment
     container_name: billing_and_payment-container
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     networks:
       - custom_network
 
@@ -23,12 +25,14 @@ services:
     build:
       context: ./Database_Services/inventory_and_supplies
       dockerfile: Dockerfile
+    restart: always
     links:
       - "mysql:localhost"
     image: inventory_and_supplies
     container_name: inventory_and_supplies-container
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     networks:
       - custom_network
 
@@ -36,12 +40,14 @@ services:
     build:
       context: ./Database_Services/patient_crm
       dockerfile: Dockerfile
+    restart: always
     links:
       - "mysql:localhost"
     image: patient_crm
     container_name: patient_crm-container
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     networks:
       - custom_network
 
@@ -49,12 +55,14 @@ services:
     build:
       context: ./Database_Services/staff_management
       dockerfile: Dockerfile
+    restart: always
     links:
       - "mysql:localhost"
     image: staff_management
     container_name: staff_management-container
     depends_on:
-      - mysql
+      mysql:
+        condition: service_healthy
     networks:
       - custom_network
 
